--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
    <modules>
       <module>core</module>
       <module>dspace</module>
+      <module>demo</module>
+      <module>image</module>
       <module>distribution</module>
    </modules>
 </project>
