--- a/image/pom.xml
+++ b/image/pom.xml
@@ -29,18 +29,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tika</groupId>
-			<artifactId>tika-bundle</artifactId>
+			<artifactId>tika-app</artifactId>
 			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.media</groupId>
 			<artifactId>jai_codec</artifactId>
-			<version>1.1.2_01</version>
+			<version>1.1.4</version>
 		</dependency>
 		<dependency>
       		<groupId>javax.media</groupId>
       		<artifactId>jai_core</artifactId>
-      		<version>1.1.3</version>
+      		<version>1.1.4</version>
     	</dependency>
 
 	</dependencies>
