--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>DSpaceFileAnalyzer</artifactId>
 			<version>2.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-app</artifactId>
+            <version>1.2</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
