--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -35,10 +35,15 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-app</artifactId>
-            <version>1.2</version>
+            <version>1.4</version>
         </dependency>
 	</dependencies>
 	<build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
