--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 	</properties>
 
 	<build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
 		<pluginManagement>
 			<plugins>
 				<plugin>
