--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>tika-app</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>gov.loc</groupId>
+            <artifactId>bagit</artifactId>
+            <version>4.8</version>
+        </dependency>
 	</dependencies>
 	<build>
         <resources>
