--- a/dspace/pom.xml
+++ b/dspace/pom.xml
@@ -27,7 +27,12 @@
 			<artifactId>CoreFileAnalyzer</artifactId>
 			<version>2.0</version>
 		</dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 	<build>
         <resources>
