--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="var" path="TIKA-JAR"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="var" path="BAGIT-JAR"/>
+	<classpathentry kind="var" path="M2REP/commons-io/commons-io/2.0.1/commons-io-2.0.1.jar"/>
 	<classpathentry kind="output" path="dspace/target/classes"/>
 </classpath>
