--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>freelib-marc4j</artifactId>
             <version>2.6.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.9</version>
+        </dependency>
 	</dependencies>
 	<build>
         <resources>
