--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="var" path="M2_REPO/gov/loc/bagit/4.9.0/bagit-4.9.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.0.1/commons-io-2.0.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/info/freelibrary/freelib-marc4j/2.6.6/freelib-marc4j-2.6.6.jar"/>
+	<classpathentry kind="var" path="M2_REPO/commons-cli/commons-cli/1.3.1/commons-cli-1.3.1.jar"/>
 	<classpathentry kind="output" path="dspace/target/classes"/>
 </classpath>
