--- a/bag-utils/pom.xml
+++ b/bag-utils/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>bagit</artifactId>
             <version>4.9.0</version>
         </dependency>
+         <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
+         </dependency>
     </dependencies>
 	<build>
 		<plugins>
