Revert "Remove hard coded main file"
This reverts commit 3fc6dc18994b568f87485ddb5ad12e646f3adc68.

--- a/bag-utils/pom.xml
+++ b/bag-utils/pom.xml
@@ -55,6 +55,18 @@
         		<version>2.4</version>
 			</plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>edu.georgetown.library.fileAnalyzer.cmd.AIPToAPTCmd</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
