--- a/bag-utils/pom.xml
+++ b/bag-utils/pom.xml
@@ -42,6 +42,9 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <includes>
+                    <include>log4j.properties</include>
+                </includes>
             </resource>
         </resources>
 		<plugins>
