--- a/bag-utils/pom.xml
+++ b/bag-utils/pom.xml
@@ -42,10 +42,7 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <targetPath>${project.build.directory}</targetPath>
-                <includes>
-                    <include>log4j.properties</include>
-                </includes>
+                <filtering>true</filtering> 
             </resource>
         </resources>
 		<plugins>
