--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="core/src/main"/>
-	<classpathentry excluding="resouces/" kind="src" path="bag-utils/src/main"/>
+	<classpathentry kind="src" path="bag-utils/src/main"/>
 	<classpathentry kind="src" path="core-utils/src/main"/>
 	<classpathentry kind="src" path="demo/src/main"/>
 	<classpathentry kind="src" path="dspace/src/main"/>
@@ -11,6 +11,5 @@
 	<classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.0.1/commons-io-2.0.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/info/freelibrary/freelib-marc4j/2.6.6/freelib-marc4j-2.6.6.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-cli/commons-cli/1.3.1/commons-cli-1.3.1.jar"/>
-	<classpathentry kind="lib" path="bag-utils/src/main/resouces"/>
 	<classpathentry kind="output" path="dspace/target/classes"/>
 </classpath>
