--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="core/src/main"/>
-	<classpathentry kind="src" path="bag-utils/src/main"/>
+	<classpathentry kind="src" path="bag-utils/src/main/resources"/>
+	<classpathentry excluding="resources/" kind="src" path="bag-utils/src/main"/>
 	<classpathentry kind="src" path="core-utils/src/main"/>
 	<classpathentry kind="src" path="demo/src/main"/>
 	<classpathentry kind="src" path="dspace/src/main"/>
