--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="core/src/main"/>
 	<classpathentry excluding="resources/" kind="src" path="bag-utils/src/main"/>
+    <classpathentry kind="src" path="bag-utils/src/main/resources"/>
 	<classpathentry kind="src" path="core-utils/src/main"/>
 	<classpathentry kind="src" path="demo/src/main"/>
 	<classpathentry kind="src" path="dspace/src/main"/>
